--- a/css/application.css
+++ b/css/application.css
@@ -3,7 +3,7 @@ html, body, div {
 	overflow: hidden;
 }
 body {
-	background: #eee;
+	background: #0060aa;
 	margin: 0;
 }
 #video {
@@ -22,6 +22,18 @@ fieldset{
 	margin:10% auto;
 	position: relative;
 	overflow: visible;
+}
+
+#scorediv{
+	text-align: center;
+	font-size: 33px;
+	color: white;
+	display:none;
+	max-width: 800px;
+	margin:20% auto;
+	position: relative;
+	overflow: visible;
+
 }
 
 label{
@@ -105,4 +117,22 @@ input#send_message{
 	top: 0px;
 	width: 96%;
 	z-index:999;
+}
+
+#feedback{
+background: url(../img/nuage_03.png) transparent no-repeat;
+width: 320px;
+height: 300px;
+display: block;
+top: 20%;
+position: fixed;
+z-index: 999;
+margin: 0% 28%;
+overflow: hidden;
+text-align: center;
+padding: 181px 130px 0px;
+text-shadow: 0px -1px 1px black;
+font-size: 30px;
+color: white;
+display: none;
 }
