--- a/css/application.css
+++ b/css/application.css
@@ -131,9 +131,9 @@ z-index: 999;
 margin: 0% 28%;
 overflow: hidden;
 text-align: center;
-padding: 181px 130px 0px;
+padding: 161px 130px 0px;
 text-shadow: 0px -1px 1px black;
-font-size: 30px;
-color: white;
+font-size: 27px;
+color: #EEE;
 display: none;
 }
